5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1845_2221.log
== TEST (2019-06-26 14:58:34) 
-- CODE:
from numpy import *

matriz = array(eval(input("Notas: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

soma = 0
menor_nota = min(m[i, :])

for j in range(colunas):
	 soma = soma + menor_nota
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:58:44) 
-- CODE:
from numpy import *

matriz = array(eval(input("Notas: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

soma = 0
menor_nota = min(m[i, :])

for j in range(colunas):
	 soma = soma + menor_nota
		
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:59:03) 
-- CODE:
from numpy import *

matriz = array(eval(input("Notas: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

soma = 0
menor_nota = min(matriz[i, :])

for j in range(colunas):
	 soma = soma + menor_nota
		
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:59:17) 
-- CODE:
from numpy import *

matriz = array(eval(input("Notas: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

soma = 0


for j in range(colunas):
	menor_nota = min(matriz[i, :])
	 soma = soma + menor_nota
		
print(soma)
-- ERROR:
File "XXXX", line 12
    soma = soma + menor_nota
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:59:25) 
-- CODE:
from numpy import *

matriz = array(eval(input("Notas: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

soma = 0


for j in range(colunas):
	menor_nota = min(matriz[i, :])
	soma = soma + menor_nota
		
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:59:39) 
-- CODE:
from numpy import *

matriz = array(eval(input("Notas: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

soma = 0


for j in range(colunas):
	menor_nota = min(matriz[i, :])
	soma = soma + menor_nota
		
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:59:51) 
-- CODE:
from numpy import *

matriz = array(eval(input("Notas: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

soma = 0


for j in range(colunas):
	menor_nota = min(matriz[j, :])
	soma = soma + menor_nota
		
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:00:14) 
-- CODE:
from numpy import *

matriz = array(eval(input("Notas: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

soma = 0


for i in range(linhas):
	menor_nota = min(matriz[i, :])
	soma = soma + menor_nota
		
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:00:36) 
-- CODE:
from numpy import *

matriz = array(eval(input("Notas: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

soma = 0


for i in range(linhas):
	menor_nota = min(matriz[i, :])
	soma = soma + menor_nota
	print (menor_nota)	
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:01:23) 
-- CODE:
from numpy import *

matriz = array(eval(input("Notas: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

soma = 0


for j in range(colunas):
	menor_nota = min(matriz[:, j])
	soma = soma + menor_nota
	print (menor_nota)	
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:02:07) 
-- CODE:
from numpy import *

matriz = array(eval(input("Notas: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

soma = 0


for j in range(colunas):
	menor_nota = min(matriz[:, j])
	soma = soma + menor_nota
	print (menor_nota)	
print(soma/linhas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:02:34) 
-- CODE:
from numpy import *

matriz = array(eval(input("Notas: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

soma = 0


for j in range(colunas):
	menor_nota = min(matriz[:, j])
	soma = soma + menor_nota
	print (menor_nota)	
	
print(soma/colunas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:05:34) 
-- CODE:
from numpy import *

matriz = array(eval(input("Notas: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

soma = 0

for i in range(linhas):
	for j in range(colunas):
		menor_nota = min(matriz[i, j])
		soma = soma + menor_nota
		print (menor_nota)	
	
print(soma/colunas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:06:00) 
-- CODE:
from numpy import *

matriz = array(eval(input("Notas: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

soma = 0


for j in range(colunas):
	menor_nota = min(matriz[:, j])
	soma = soma + menor_nota
	print (menor_nota)	
	
print(soma/colunas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:06:50) 
-- CODE:
from numpy import *

matriz = array(eval(input("Notas: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

soma = 0


for i in range(linhas):
	menor_nota = min(matriz[i, :])
	soma = soma + menor_nota
	print (menor_nota)	
	
print(soma/colunas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:07:00) 
-- CODE:
from numpy import *

matriz = array(eval(input("Notas: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

soma = 0


for i in range(linhas):
	menor_nota = min(matriz[i, :])
	soma = soma + menor_nota
	print (menor_nota)	
	
print(soma/linhas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:07:44) 
-- CODE:
from numpy import *

matriz = array(eval(input("Notas: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

soma = 0


for i in range(linhas):
	menor_nota = min(matriz[i, :])
	soma = soma + menor_nota
	
media = round(soma/linhas, 2)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:07:49) 
-- CODE:
from numpy import *

matriz = array(eval(input("Notas: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

soma = 0


for i in range(linhas):
	menor_nota = min(matriz[i, :])
	soma = soma + menor_nota
	
media = round(soma/linhas, 2)
print(media)
-- EXECUTION TIME:
1.0785
-- TEST CASE 1:
---- input:
[[8.9,7.3,5.2,7.7],[10.0,5.6,8.8,9.5],[3.2,5.6,7.8,8.7]]
---- correct output:
4.67
---- user output:
4.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
